// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`VideoBackground component should render background video 1`] = `
<Fragment>
  <video
    autoPlay={true}
    className="makeStyles-video-1"
    loop={true}
    muted={true}
    playsInline={true}
    poster="videopostertest.jpg"
  >
    <source
      src="videosourcetest.mp4"
      type="video/mp4"
    />
  </video>
  <div
    className="makeStyles-overlay-2"
  />
  <div
    className="makeStyles-content-3"
  >
    <div
      className="unique"
    />
  </div>
</Fragment>
`;

exports[`VideoBackground component should render without background video 1`] = `
<Fragment>
  <div
    className="makeStyles-overlay-2"
  />
  <div
    className="makeStyles-content-3"
  >
    <div
      className="unique"
    />
  </div>
</Fragment>
`;
